--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -28,7 +28,8 @@
 <p><em><strong>3. </strong></em><span>以 stop.bat 關閉 start_ipv6.bat 開啟的可攜系統，改以心建立的 start_python313.bat 開啟可攜環境，之後在命令列輸入 python，確認目前的 Python 版本為 3.13.2 後，利用 Ctrl + z 退出 Python 後，利用 pip list 確認目前的 Python 3.13.2 系統尚未配置 pip 模組管理工具。</span></p>
 <p><span><em><strong>4. </strong></em>在命令列中，以 python get-pip.py 安裝 pip 工具，完成後，以 pip list 確認 pip.exe 已經配置完成。</span></p>
 <p><span><em><strong>5.</strong></em> 最後在命令列中，以 pip install flask flask_cors bs4 lxml pelican markdown 安裝 cmsimde 網際內容管理系統啟動所需的 Python 模組後，此可攜系統中的 Python 3.13.2 套件已經可以用來維護個人作業倉儲與分組倉儲。</span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/E3gKzG2Henk?si=CqjaE5bnKzBVBGFO" title="YouTube video player" width="450"></iframe></p><h2>task2</h2>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/E3gKzG2Henk?si=CqjaE5bnKzBVBGFO" title="YouTube video player" width="450"></iframe></p>
+<h2>task2</h2>
 <p><span>1. 設定 Git 使用 PuTTY</span></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">[remote "origin"]
     url = git@mysession:用戶名/倉儲名.git
@@ -88,7 +89,8 @@
     fetch = +refs/heads/*:refs/remotes/origin/*</pre>
 <p><span>最後完成推送：</span></p>
 <pre class="brush:java;auto-links:false;toolbar:false" contenteditable="false">git push origin main</pre>
-<p><br/><br/><br/><br/></p><h2>task3</h2>
+<p><br/><br/><br/><br/></p>
+<h2>task3</h2>
 <h4>使用 Solvespace 建立<span>平面四連桿</span>系統零組件：</h4>
 <p>41223110零件繪製:</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/oBYFx0VL45E?si=G5Brbw9-6V9wny5j" title="YouTube video player" width="450"></iframe></p>
@@ -101,7 +103,8 @@
 <p>41223133<span>零件繪製:</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/-P79XXjD4Gw?si=t2xNe9xPJqVopHvB" title="YouTube video player" width="450"></iframe></p>
 <p><span>41223147</span><span>零件組裝:</span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/xaiags2S11Q?si=cCCoJEHwA4tJTLVC" title="YouTube video player" width="450"></iframe></p><h2>task4</h2>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/xaiags2S11Q?si=cCCoJEHwA4tJTLVC" title="YouTube video player" width="450"></iframe></p>
+<h2>task4</h2>
 <p><span><a href="https://mdecd2025.github.io/2a-ag4/content/Brython.html?src=https://gist.githubusercontent.com/zhe41223118/de8d72a66126859139f42a25276bfa25/raw/1dd61ed37c8457f99353d5ddfd539bd27ff28a83/ag">2a分組網站與倉儲連結</a></span></p>
 <p><span><a href="https://mdecd2025.github.io/2a-ag4/content/Brython.html?src=https://gist.githubusercontent.com/zhe41223118/8ab2bde273de00d794d7d46d7540dc08/raw/8a7fdc0fc7cd89c04f5019fc620a0677f50b4fd6/bg">2b分組網站與倉儲連結</a></span></p>
 <p><span>上列程式已經給出兩班當時已經參與分組的學員 Github 帳號，因此只需要從 <a href="https://mde.tw/list/2a.txt">https://mde.tw/list/2a.txt</a> 讀取學員的學號與 Github 帳號，並且在 for 迴圈中，逐一用學員的 Github 帳號相對於各班已經參與分組的學員 Github 帳號，並且列出特定學員的 Github 帳號不在前述已經參與分組的學員帳號數列中，即可列出截至當時尚未納入分組的學員學號。</span></p>
@@ -120,123 +123,8 @@ for i in all_stud:
     stud_github = stud[1]
     if stud_github not in a_all_members:
         print(stud_num)</pre>
-<p><a href="https://mdecd2025.github.io/2a-ag4/content/Brython.html?src=https://gist.githubusercontent.com/zhe41223118/fcdf65c3206155c5cd56140e47c6c87d/raw/8a5262e66228212fbc4f862ceaf67c798c9fb54c/2a-1">2a未加入團隊學員</a></p><h2>task5</h2>
-<h4 data-end="11" data-start="0">1. 用繁體中文詳細說明下列資料</h4>
-<p data-end="239" data-start="118">Webots 是一個開放源碼的機器人仿真軟體，它允許用戶進行機器人設計、測試和模擬。其主要特點是支援多種機器人平台，提供物理引擎來模擬現實世界的物理條件，如碰撞、重力、摩擦等。Webots 主要應用於機器人學習、機器人控制、機器人設計等領域。</p>
-<p data-end="277" data-start="241">這篇簡介介紹了 Webots 的核心功能和使用方法，涵蓋了以下幾個要點：</p>
-<ul data-end="695" data-start="279">
-<li data-end="357" data-start="279">
-<p data-end="357" data-start="281"><strong data-end="290" data-start="281">機器人模型</strong>：Webots 提供了一些預先設計的機器人模型，這些模型可以用來直接進行仿真或根據需求進行修改。這些機器人包括四輪驅動車、機械手臂等。</p>
-</li>
-<li data-end="409" data-start="361">
-<p data-end="409" data-start="363"><strong data-end="371" data-start="363">場景設置</strong>：用戶可以根據需要構建複雜的環境場景，包括各種靜態物體、動態物體、傳感器等。</p>
-</li>
-<li data-end="490" data-start="411">
-<p data-end="490" data-start="413"><strong data-end="422" data-start="413">控制和編程</strong>：Webots 支援多種編程語言來進行機器人控制，最常用的是 Python、C 和 C++。用戶可以通過編寫控制代碼來控制機器人的行為。</p>
-</li>
-<li data-end="551" data-start="492">
-<p data-end="551" data-start="494"><strong data-end="505" data-start="494">視覺和數據分析</strong>：Webots 提供了強大的可視化工具來幫助用戶查看仿真過程中的數據和結果，並進行性能分析。</p>
-</li>
-<li data-end="632" data-start="553">
-<p data-end="632" data-start="555"><strong data-end="563" data-start="555">物理引擎</strong>：Webots 使用高效的物理引擎來模擬現實世界的物理現象，如重力、碰撞、摩擦等。這使得仿真環境更接近現實，並有助於開發真實世界中的應用。</p>
-</li>
-<li data-end="695" data-start="634">
-<p data-end="695" data-start="636"><strong data-end="644" data-start="636">可擴展性</strong>：Webots 是開放源碼的，並支援插件和擴展，因此用戶可以根據自己的需求擴展 Webots 的功能。</p>
-</li>
-</ul>
-<h4 data-end="376" data-start="357">2. 重要英文單字與解釋及用法</h4>
-<ul data-end="751" data-start="378">
-<li data-end="435" data-start="378"><strong data-end="394" data-start="380">Simulation</strong>: 模擬，指用來模擬現實世界的過程或系統。在 Webots 中，指虛擬環境的運行。</li>
-<li data-end="504" data-start="436"><strong data-end="453" data-start="438">Prototyping</strong>: 原型製作，指開發產品或系統的初步模型或版本。在 Webots 中，用來快速構建機器人的模型和功能。</li>
-<li data-end="550" data-start="505"><strong data-end="521" data-start="507">Locomotion</strong>: 運動學，指機器人的移動方式，例如輪式、步態或飛行運動。</li>
-<li data-end="596" data-start="551"><strong data-end="567" data-start="553">Controller</strong>: 控制器，指控制機器人行為的程式，通常是由使用者編寫的。</li>
-<li data-end="640" data-start="597"><strong data-end="611" data-start="599">Actuator</strong>: 執行器，指機器人用來執行動作的裝置，如馬達、電動機等。</li>
-<li data-end="684" data-start="641"><strong data-end="653" data-start="643">Sensor</strong>: 感測器，指機器人用來感知環境的裝置，如距離感測器、相機等。</li>
-<li data-end="751" data-start="685"><strong data-end="712" data-start="687">Supervisor Controller</strong>: 監控控制器，具有執行高權限操作的能力，能夠進行像人類操作員一樣的模擬控制。</li>
-</ul>
-<h4 data-end="766" data-start="753">3.摘要出下列內容:</h4>
-<p data-end="69" data-start="17"><strong data-end="69" data-start="17">Webots User Guide R2025a: Introduction to Webots</strong></p>
-<p data-end="230" data-start="71">Webots 是一款專業的機器人仿真軟體，提供快速原型設計環境，讓使用者可以創建具有物理屬性（如質量、關節、摩擦係數等）的 3D 虛擬世界。使用者可以在 Webots 中創建被動或主動物體，並模擬不同的移動機構（如輪式、步態或飛行機器人）。這些機器人可以搭載各種傳感器和驅動裝置，並且可以透過程式編寫來展現所需的行為。</p>
-<p data-end="374" data-start="232">Webots 支援的功能不僅限於機器人模擬，它還包含了多種與現實機器人連接的介面，使得當仿真機器人運行正常後，控制程式可以轉移至實際機器人進行控制。Webots 的應用範圍涵蓋了學術研究、移動機器人原型設計、機器人運動學研究、群體智能研究等領域，並且被廣泛應用於機器人競賽及教育領域。</p>
-<p data-end="510" data-start="376">使用 Webots 需要具備一些基本的編程知識，通常是 C、C++、Java、Python 或 MATLAB 等語言，這些知識可用來編寫機器人的控制程式。如果使用者希望創建自定義的機器人模型或環境物體，則需要對 3D 計算機圖形學和 VRML97 描述語言有基本了解。</p>
-<p data-end="600" data-start="512">Webots 提供了專業的付費用戶支援服務，並且社群支援也可以透過各種平台獲得，例如 Robotics StackExchange、GitHub 討論區和 Discord 等。</p>
-<p data-end="742" data-start="602">Webots 模擬系統由多個組件組成，包括世界檔案（.wbt），控制器程式，以及可選的物理插件。世界檔案描述了機器人及其環境的屬性，而控制器程式則控制機器人的行為。Supervisor 控制器則是特別的控制器，可以執行需要高權限操作的任務，例如隨機移動機器人或錄製模擬過程的視頻。</p>
-<h4 data-end="766" data-start="753">4. 逐句文法說明</h4>
-<ul data-end="1536" data-start="768">
-<li data-end="957" data-start="768">
-<p data-end="840" data-start="770"><strong data-end="840" data-start="770">Webots is a professional mobile robot simulation software package.</strong></p>
-<ul data-end="957" data-start="843">
-<li data-end="870" data-start="843">"is" 為系統動詞，表明 Webots 的性質。</li>
-<li data-end="957" data-start="873">"a professional mobile robot simulation software package" 是名詞短語，作為補語說明 Webots 的功能。</li>
-</ul>
-</li>
-<li data-end="1289" data-start="959">
-<p data-end="1129" data-start="961"><strong data-end="1129" data-start="961">It offers a rapid prototyping environment that allows the user to create 3D virtual worlds with physics properties such as mass, joints, friction coefficients, etc.</strong></p>
-<ul data-end="1289" data-start="1132">
-<li data-end="1162" data-start="1132">"offers" 是動詞，表示 Webots 提供某物。</li>
-<li data-end="1225" data-start="1165">"a rapid prototyping environment" 是名詞短語，作為動詞 "offers" 的賓語。</li>
-<li data-end="1289" data-start="1228">"that allows the user to create..." 為定語從句，修飾 "environment"。</li>
-</ul>
-</li>
-<li data-end="1536" data-start="1291">
-<p data-end="1471" data-start="1293"><strong data-end="1471" data-start="1293">Moreover, they may be equipped with a number of sensor and actuator devices, such as distance sensors, drive wheels, cameras, motors, touch sensors, emitters, receivers, etc.</strong></p>
-<ul data-end="1536" data-start="1474">
-<li data-end="1511" data-start="1474">"may be equipped" 為被動語態，表示設備可能被裝配上。</li>
-<li data-end="1536" data-start="1514">"such as" 用來列舉具體的設備。</li>
-</ul>
-</li>
-</ul>
-<h4 data-end="2368" data-start="2336">5. 詳細說明如何手動方式在 Webots 建立下列場景</h4>
-<p data-end="2400" data-start="2370">要手動在 Webots 中建立場景，您可以按照以下步驟進行：</p>
-<ol data-end="2682" data-start="2402">
-<li data-end="2432" data-start="2402"><strong data-end="2418" data-start="2405">啟動 Webots</strong>：開啟 Webots 軟體。</li>
-<li data-end="2492" data-start="2433"><strong data-end="2457" data-start="2436">創建新世界 (New World)</strong>：選擇<span> </span><code data-end="2480" data-start="2461">File -&gt; New World</code>，創建一個新的仿真世界。</li>
-<li data-end="2568" data-start="2493"><strong data-end="2506" data-start="2496">設置場景元素</strong>：在左側的“場景樹”中，您可以選擇添加不同的物體，如機器人、地面、障礙物等。選擇“Add”按鈕來添加物體，並選擇所需的物件。</li>
-<li data-end="2604" data-start="2569"><strong data-end="2583" data-start="2572">配置機器人模型</strong>：選擇一個機器人模型，並配置其所需的參數。</li>
-<li data-end="2643" data-start="2605"><strong data-end="2617" data-start="2608">設置傳感器</strong>：為您的機器人添加各種傳感器，如距離感測器、相機等。</li>
-<li data-end="2682" data-start="2644"><strong data-end="2658" data-start="2647">保存並測試場景</strong>：設定完成後，保存場景並運行仿真來測試您的場景。</li>
-</ol>
-<h4 data-end="2368" data-start="2336">6. 手把手一步步說明如何利用圖形介面 menu 建立這個場景，有哪些要點必須特別注意？ 在 Webots 中使用圖形介面建立場景的步驟：</h4>
-<p><strong>1.開啟 Webots 軟體</strong>，選擇 File -&gt; New World 開始建立新的仿真場景。</p>
-<p><strong>2.添加物體</strong>：點擊左上方的“Add”按鈕，選擇需要的場景物體（例如地面、牆壁等）。每次添加後可以透過右側的屬性視窗來設置每個物體的具體參數。</p>
-<p><strong>3. 創建機器人</strong>：在 Add -&gt; Robot 中選擇一個機器人模型，如差速車、機械手臂等，並為其設置適當的參數。</p>
-<p><strong>4. 調整視角和環境</strong>：設置仿真環境的背景、光線等。</p>
-<p><strong>5. 儲存場景</strong>：完成場景設置後，選擇 File -&gt; Save World 儲存當前的場景。</p><h1>w3</h1>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># 從  Brython 程式庫中的 browser 導入 html, 可用來輸出超文件內容
-# 而所導入的 document 可以指向網頁中的特定 id 內容
-from browser import html, document
-# 建立 url 變數與網站中 2a 學員的學號與帳號資料 URL 網誌字串對應
-url = "https://mde.tw/list/2a.txt"
-# 利用 open() 物件中的 readlines() 方法, 取出網站中的資料並逐行放入數列中, 因此 data 的資料型別為數列
-data = open(url).readlines()
-# 進行資料查驗時, 印出 data 數列內容
-#print(data)
-# 因為學員資料中的第一列為標題, 因此有效資料從索引值 1 開始
-all_stud = data[1:]
-# 利用 len() 函式查驗 all_stud 數列有幾筆資料, 因為要與前後的字串併接, 因此利用 str() 將整數轉為字串
-print("總共有 " + str(len(all_stud)) + "名學員")
-# 
-# 利用 document[] 取得 id 為 "brython_div1" 的位置, 然後與 brython_div1 變數對應
-brython_div1 = document["brython_div1"]
-# 利用 Brython 的 "&lt;=" 特殊符號, 將右值帶有字串與超文件內容物件插入 brython_div1 變數所指定的位置
-# 其中利用 html.A 建立 anchor 標註物件, 第一個變數為 anchor 字串, 第二個變數則為 hyper text reference
-brython_div1 &lt;= "1. " + html.A("2a-ag6", href="https://mdecd2025.github.io/2a-ag6/")+ html.A("(repo)", href="https://github.com/mdecd2025/2a-ag6")
-# 利用 html.BR() 插入 break 標註
-brython_div1 &lt;= html.BR()
-brython_div1 &lt;= "2. " + html.A("41223110", href="https://mdecd2025.github.io/hw-41223110/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41223110")
-brython_div1 &lt;= html.BR()
-brython_div1 &lt;= "3. " + html.A("41223125", href="https://mdecd2025.github.io/hw-Linjiahong41223125/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-Linjiahong41223125")
-brython_div1 &lt;= html.BR()
-brython_div1 &lt;= "4. " + html.A("41223129", href="https://mdecd2025.github.io/hw-hong41223129/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-hong41223129")
-brython_div1 &lt;= html.BR()
-brython_div1 &lt;= "5. " + html.A("41223132", href="https://mdecd2025.github.io/hw-CHN41223132/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-CHN41223132")
-brython_div1 &lt;= html.BR()
-brython_div1 &lt;= "6. " + html.A("41223133", href="https://mdecd2025.github.io/hw-41223133/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41223133")
-brython_div1 &lt;= html.BR()
-brython_div1 &lt;= "7. " + html.A("41223147", href="https://mdecd2025.github.io/hw-41223147/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41223147")
-</pre>
-<p><span>1. </span><a href="https://mdecd2025.github.io/2a-ag6/">2a-ag6</a><a href="https://github.com/mdecd2025/2a-ag6">(repo)</a><br/><span>2. </span><a href="https://mdecd2025.github.io/hw-41223110/">41223110</a><a href="https://github.com/mdecd2025/hw-41223110">(repo)</a><br/><span>3. </span><a href="https://mdecd2025.github.io/hw-Linjiahong41223125/">41223125</a><a href="https://github.com/mdecd2025/hw-Linjiahong41223125">(repo)</a><br/><span>4. </span><a href="https://mdecd2025.github.io/hw-hong41223129/">41223129</a><a href="https://github.com/mdecd2025/hw-hong41223129">(repo)</a><br/><span>5. </span><a href="https://mdecd2025.github.io/hw-CHN41223132/">41223132</a><a href="https://github.com/mdecd2025/hw-CHN41223132">(repo)</a><br/><span>6. </span><a href="https://mdecd2025.github.io/hw-41223133/">41223133</a><a href="https://github.com/mdecd2025/hw-41223133">(repo)</a><br/><span>7. </span><a href="https://mdecd2025.github.io/hw-41223147/">41223147</a><a href="https://github.com/mdecd2025/hw-41223147">(repo)</a></p>
-<h1>w5</h1>
+<p><a href="https://mdecd2025.github.io/2a-ag4/content/Brython.html?src=https://gist.githubusercontent.com/zhe41223118/fcdf65c3206155c5cd56140e47c6c87d/raw/8a5262e66228212fbc4f862ceaf67c798c9fb54c/2a-1">2a未加入團隊學員</a></p>
+<h2>task5</h2>
 <h4 data-end="11" data-start="0">1. 用繁體中文詳細說明下列資料</h4>
 <p data-end="239" data-start="118">Webots 是一個開放源碼的機器人仿真軟體，它允許用戶進行機器人設計、測試和模擬。其主要特點是支援多種機器人平台，提供物理引擎來模擬現實世界的物理條件，如碰撞、重力、摩擦等。Webots 主要應用於機器人學習、機器人控制、機器人設計等領域。</p>
 <p data-end="277" data-start="241">這篇簡介介紹了 Webots 的核心功能和使用方法，涵蓋了以下幾個要點：</p>
@@ -318,6 +206,41 @@ brython_div1 &lt;= "7. " + html.A("41223147", href="https://mdecd2025.github.io/
 <p><strong>3. 創建機器人</strong>：在 Add -&gt; Robot 中選擇一個機器人模型，如差速車、機械手臂等，並為其設置適當的參數。</p>
 <p><strong>4. 調整視角和環境</strong>：設置仿真環境的背景、光線等。</p>
 <p><strong>5. 儲存場景</strong>：完成場景設置後，選擇 File -&gt; Save World 儲存當前的場景。</p>
+<h1>w3</h1>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># 從  Brython 程式庫中的 browser 導入 html, 可用來輸出超文件內容
+# 而所導入的 document 可以指向網頁中的特定 id 內容
+from browser import html, document
+# 建立 url 變數與網站中 2a 學員的學號與帳號資料 URL 網誌字串對應
+url = "https://mde.tw/list/2a.txt"
+# 利用 open() 物件中的 readlines() 方法, 取出網站中的資料並逐行放入數列中, 因此 data 的資料型別為數列
+data = open(url).readlines()
+# 進行資料查驗時, 印出 data 數列內容
+#print(data)
+# 因為學員資料中的第一列為標題, 因此有效資料從索引值 1 開始
+all_stud = data[1:]
+# 利用 len() 函式查驗 all_stud 數列有幾筆資料, 因為要與前後的字串併接, 因此利用 str() 將整數轉為字串
+print("總共有 " + str(len(all_stud)) + "名學員")
+# 
+# 利用 document[] 取得 id 為 "brython_div1" 的位置, 然後與 brython_div1 變數對應
+brython_div1 = document["brython_div1"]
+# 利用 Brython 的 "&lt;=" 特殊符號, 將右值帶有字串與超文件內容物件插入 brython_div1 變數所指定的位置
+# 其中利用 html.A 建立 anchor 標註物件, 第一個變數為 anchor 字串, 第二個變數則為 hyper text reference
+brython_div1 &lt;= "1. " + html.A("2a-ag6", href="https://mdecd2025.github.io/2a-ag6/")+ html.A("(repo)", href="https://github.com/mdecd2025/2a-ag6")
+# 利用 html.BR() 插入 break 標註
+brython_div1 &lt;= html.BR()
+brython_div1 &lt;= "2. " + html.A("41223110", href="https://mdecd2025.github.io/hw-41223110/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41223110")
+brython_div1 &lt;= html.BR()
+brython_div1 &lt;= "3. " + html.A("41223125", href="https://mdecd2025.github.io/hw-Linjiahong41223125/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-Linjiahong41223125")
+brython_div1 &lt;= html.BR()
+brython_div1 &lt;= "4. " + html.A("41223129", href="https://mdecd2025.github.io/hw-hong41223129/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-hong41223129")
+brython_div1 &lt;= html.BR()
+brython_div1 &lt;= "5. " + html.A("41223132", href="https://mdecd2025.github.io/hw-CHN41223132/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-CHN41223132")
+brython_div1 &lt;= html.BR()
+brython_div1 &lt;= "6. " + html.A("41223133", href="https://mdecd2025.github.io/hw-41223133/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41223133")
+brython_div1 &lt;= html.BR()
+brython_div1 &lt;= "7. " + html.A("41223147", href="https://mdecd2025.github.io/hw-41223147/")+ html.A("(repo)", href="https://github.com/mdecd2025/hw-41223147")
+</pre>
+<p><span>1. </span><a href="https://mdecd2025.github.io/2a-ag6/">2a-ag6</a><a href="https://github.com/mdecd2025/2a-ag6">(repo)</a><br/><span>2. </span><a href="https://mdecd2025.github.io/hw-41223110/">41223110</a><a href="https://github.com/mdecd2025/hw-41223110">(repo)</a><br/><span>3. </span><a href="https://mdecd2025.github.io/hw-Linjiahong41223125/">41223125</a><a href="https://github.com/mdecd2025/hw-Linjiahong41223125">(repo)</a><br/><span>4. </span><a href="https://mdecd2025.github.io/hw-hong41223129/">41223129</a><a href="https://github.com/mdecd2025/hw-hong41223129">(repo)</a><br/><span>5. </span><a href="https://mdecd2025.github.io/hw-CHN41223132/">41223132</a><a href="https://github.com/mdecd2025/hw-CHN41223132">(repo)</a><br/><span>6. </span><a href="https://mdecd2025.github.io/hw-41223133/">41223133</a><a href="https://github.com/mdecd2025/hw-41223133">(repo)</a><br/><span>7. </span><a href="https://mdecd2025.github.io/hw-41223147/">41223147</a><a href="https://github.com/mdecd2025/hw-41223147">(repo)</a></p>
 <h1>Brython</h1>
 <p><button id="add1to100">1 add to 100</button></p>
 <!-- 導入 brython 程式庫 -->
