--- a/content/Exam3.html
+++ b/content/Exam3.html
@@ -142,8 +142,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Final << <a href='Final.html'>Previous</a> <a href='task1.html'>Next</a> >> task1<br /><h1>task</h1>
-<br />Final << <a href='Final.html'>Previous</a> <a href='task1.html'>Next</a> >> task1</div>
+    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>Exam3</h1>
+<p></p>
+<br />w3 << <a href='w3.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
