--- a/config/content.htm
+++ b/config/content.htm
@@ -253,8 +253,8 @@ brython_div1 &lt;= "7. " + html.A("41223147", href="https://mdecd2025.github.io/
 <h2>3-2video</h2>
 <p><a href="/downloads/Exam3-2_ag6.zip">/downloads/Exam3-2_ag6.zip</a></p>
 <p><a href="/downloads/41223147Exam3-2.7z">41223147Exam3-2.7z</a></p><h2>3-3video</h2>
-<p></p>
-<h1>Brython</h1>
+<p><a href="/downloads/41223147Exam3-3.7z">41223147Exam3-3.7z</a></p>
+<p></p><h1>Brython</h1>
 <p><button id="add1to100">1 add to 100</button></p>
 <!-- 導入 brython 程式庫 -->
 <p>
