--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -252,7 +252,7 @@ brython_div1 &lt;= "7. " + html.A("41223147", href="https://mdecd2025.github.io/
 <p></p>
 <h2>3-2video</h2>
 <p><a href="/downloads/Exam3-2_ag6.zip">/downloads/Exam3-2_ag6.zip</a></p>
-<h2>3-3video</h2>
+<p><a href="/downloads/41223147Exam3-2.7z">41223147Exam3-2.7z</a></p><h2>3-3video</h2>
 <p></p>
 <h1>Brython</h1>
 <p><button id="add1to100">1 add to 100</button></p>
