--- a/content/3-3video.html
+++ b/content/3-3video.html
@@ -143,8 +143,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">3-2video << <a href='3-2video.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>3-3video</h1>
-<p></p>
-<br />3-2video << <a href='3-2video.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<p><a href="./../downloads/41223147Exam3-3.7z">41223147Exam3-3.7z</a></p>
+<p></p><br />3-2video << <a href='3-2video.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
