--- a/content/3-1video.html
+++ b/content/3-1video.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li class='has-children'><a href='task.html'>task</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a><li><a href='task3.html'>task3</a><li><a href='task4.html'>task4</a><li><a href='task5.html'>task5</a></li></ul><li><a href='w3.html'>w3</a><li class='has-children'><a href='Exam3.html'>Exam3</a><ul class='dropdown'><li><a href='3-1video.html'>3-1video</a><li><a href='3-2video.html'>3-2video</a><li><a href='3-3video.html'>3-3video</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li class='has-children'><a href='task.html'>task</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a><li><a href='task3.html'>task3</a><li><a href='task4.html'>task4</a><li><a href='task5.html'>task5</a></li></ul><li><a href='w3.html'>w3</a><li><a href='Exam1.html'>Exam1</a><li><a href='Exam2.html'>Exam2</a><li class='has-children'><a href='Exam3.html'>Exam3</a><ul class='dropdown'><li><a href='3-1video.html'>3-1video</a><li><a href='3-2video.html'>3-2video</a><li><a href='3-3video.html'>3-3video</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -144,13 +144,17 @@ img.add_border {
         </header>
     <div id="tipue_search_content">Exam3 << <a href='Exam3.html'>Previous</a> <a href='3-2video.html'>Next</a> >> 3-2video<br /><h1>3-1video</h1>
 <p><a href="./../downloads/41223147Exam3-1.7z">41223147Exam3-1.7z</a></p>
-<p><span style="background-color: #ffcc00;">41223132</span></p>
+<p>41223110</p>
+<p>41223125</p>
+<p>41223129</p>
+<p>41223132</p>
 <p>伺服端</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/tI1pNMyRWQ4?si=hlksJu3TES9L5vES" title="YouTube video player" width="560"></iframe></p>
 <p>客戶端</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/hRGl-pyPu9o?si=lmLZlNPX0vYK5WgK" title="YouTube video player" width="560"></iframe></p>
-<p><span style="background-color: #ffcc00;">41223147</span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/ij0HYycLWVw?si=hgvX7n449rSYOIii" title="YouTube video player" width="450"></iframe></p><br />Exam3 << <a href='Exam3.html'>Previous</a> <a href='3-2video.html'>Next</a> >> 3-2video</div>
+<p>41223147</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/ij0HYycLWVw?si=hgvX7n449rSYOIii" title="YouTube video player" width="450"></iframe></p>
+<br />Exam3 << <a href='Exam3.html'>Previous</a> <a href='3-2video.html'>Next</a> >> 3-2video</div>
         
     <!-- footer -->
       <div class="container">
