--- a/content/Exam1.html
+++ b/content/Exam1.html
@@ -2,7 +2,7 @@
         <head>
         <title>cdproject</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -142,16 +142,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">3-1video << <a href='3-1video.html'>Previous</a> <a href='3-3video.html'>Next</a> >> 3-3video<br /><h1>3-2video</h1>
-<p><a href="./../downloads/Exam3-2_ag6.zip">/downloads/Exam3-2_ag6.zip</a></p>
-<p><a href="./../downloads/41223147Exam3-2.7z">41223147Exam3-2.7z</a></p>
+    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='Exam2.html'>Next</a> >> Exam2<br /><h1>Exam1</h1>
 <p>41223110</p>
 <p>41223125</p>
 <p>41223129</p>
 <p>41223132</p>
-<p>41223147</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="300" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/72YDoXhGhnE?si=WNCf8-x6WGd_AEak" title="YouTube video player" width="450"></iframe></p>
-<br />3-1video << <a href='3-1video.html'>Previous</a> <a href='3-3video.html'>Next</a> >> 3-3video</div>
+<p>41223147</p><br />w3 << <a href='w3.html'>Previous</a> <a href='Exam2.html'>Next</a> >> Exam2</div>
         
     <!-- footer -->
       <div class="container">
