--- a/content/Exam3.html
+++ b/content/Exam3.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li class='has-children'><a href='task.html'>task</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a><li><a href='task3.html'>task3</a><li><a href='task4.html'>task4</a><li><a href='task5.html'>task5</a></li></ul><li><a href='w3.html'>w3</a><li class='has-children'><a href='Exam3.html'>Exam3</a><ul class='dropdown'><li><a href='3-1video.html'>3-1video</a><li><a href='3-2video.html'>3-2video</a><li><a href='3-3video.html'>3-3video</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li class='has-children'><a href='task.html'>task</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a><li><a href='task3.html'>task3</a><li><a href='task4.html'>task4</a><li><a href='task5.html'>task5</a></li></ul><li><a href='w3.html'>w3</a><li><a href='Exam1.html'>Exam1</a><li><a href='Exam2.html'>Exam2</a><li class='has-children'><a href='Exam3.html'>Exam3</a><ul class='dropdown'><li><a href='3-1video.html'>3-1video</a><li><a href='3-2video.html'>3-2video</a><li><a href='3-3video.html'>3-3video</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,8 +142,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='3-1video.html'>Next</a> >> 3-1video<br /><h1>Exam3</h1>
-<br />w3 << <a href='w3.html'>Previous</a> <a href='3-1video.html'>Next</a> >> 3-1video</div>
+    <div id="tipue_search_content">Exam2 << <a href='Exam2.html'>Previous</a> <a href='3-1video.html'>Next</a> >> 3-1video<br /><h1>Exam3</h1>
+<br />Exam2 << <a href='Exam2.html'>Previous</a> <a href='3-1video.html'>Next</a> >> 3-1video</div>
         
     <!-- footer -->
       <div class="container">
